# js-ml-dashboard

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  pyproject.toml
backend/: chat.py  database.py  featurization.py  main.py  model_training.py  modeling.py  molecule_viz.py  optimization.py  quick_dataset_eval.py  quick_demo_eval.py  requirements.txt  utils.py
backend/datasets/: laser_welding_dataset.pkl  pharma-tablets_dataset.pkl  vapor_pressure_train.xlsx
backend/models/: catboost_results.pkl  diabetes_GP.pkl  diabetes_RF.pkl  iris_RF.pkl  linnerud_RF.pkl  vapor-pressure_BNN.pkl  vapor-pressure_ngboost.pkl  vapor-pressure_xgboost.pkl  xgboost_results.pkl
backend/notebooks/: Molecular Design.ipynb  Molecular Space Visualization.ipynb  Quick Modeling.ipynb  Synthetic Dataset Generator.ipynb  Synthetic Datasets.ipynb  requirements-extended.txt  sklearn_models.ipynb
backend/routers/: chat.py  dataset_generator.py  meta.py  models.py  molecular.py  schemas.py  shap.py
backend/tests/: conftest.py  test_api_correlation_heatmap.py  test_api_dataset_generator.py  test_api_dataset_generator_groups.py  test_api_health.py  test_api_models.py  test_api_overview.py  test_api_schemas.py  test_api_variable_options.py  test_api_violin_plots.py  test_chat.py  test_featurization.py  test_gibbs_sample_formulation_space.py  test_modeling_plots.py  test_utils.py
frontend/: next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: ChatDrawer.tsx  ChatSidebar.tsx  Sidebar.tsx  SidebarTooltip.tsx
frontend/app/contexts/: ModelContext.tsx
frontend/app/correlation-heatmaps/: page.tsx
frontend/app/dataset-generator/: page.tsx
frontend/app/molecular-design/: page.tsx
frontend/app/object-detection/: page.tsx
frontend/app/overview/: page.tsx
frontend/app/scatter-plots/: page.tsx
frontend/app/shap-summary-plots/: page.tsx
frontend/app/shap-waterfall-plots/: page.tsx
frontend/types/: smiles-drawer.d.ts  types.tsx
(+17 files in other folders)
