[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_dashboard_backend"
version = "0.1.0"
description = "Backend code for an ML and data analysis dashboard"
authors = [{name = "Kyle Snow", email = "kylecsnow@gmail.com"}]
dependencies = [
    "black>=25.0.0,<26.0.0",
    "catboost>=1.2.7,<2.0.0",
    "fastapi==0.115.4",
    "jupyter>=1.1.1,<2.0.0",
    "jupyterlab>=4.3.5,<5.0.0",
    "ngboost>=0.5.5,<0.6.0",
    "matplotlib>=3.10.1,<4.0.0",
    "mordred>=1.2.0,<2.0.0",
    "mypy<2.0.0",
    "numpy>=1.0.0,<2.0.0",
    "openpyxl>=3.1.5,<4.0.0",
    "pandas>=2.2.3,<3.0.0",
    "plotly>=6.0.0,<7.0.0",
    "rdkit>=2024.9.5,<2025.0.0",
    "ruff==0.5.1",
    "scikit-learn>=1.6.1,<2.0.0",
    "shap==0.47.1",
    "torch==2.2.1",
    "uvicorn[standard]==0.32.0",
    "xgboost>=2.1.4,<3.0.0",
]

[tool.setuptools]
package-dir = {"ml_dashboard_backend" = "backend"}

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--verbose"
